--- a/README.org
+++ b/README.org
@@ -59,6 +59,15 @@ its content.
 
 ** Marzo 2024
 
+*** 19-Mar-24
++ [[https://ari-informatik.uibk.ac.at/meetings/final/slides/DKx4.pdf][An Isabelle/HOL formalization of narrowing and its applications to E-unifiability, reachability and infeasibility]]. ~ Dohan Kim. #ITP #IsabelleHOL
++ [[https://arxiv.org/abs/2310.10631][Llemma: An open language model for mathematics]]. ~ Zhangir Azerbayev, Hailey Schoelkopf, Keiran Paster, Marco Dos Santos, Stephen McAleer, Albert Q. Jiang, Jia Deng, Stella Biderman, Sean Welleck. #LLMs #Math #ITP #LeanProver #IsabelleHOL #Coq
++ [[https://youtu.be/O0F6EFyDA58][Can AI do mathematics?]] ~ Kevin Buzzard. #ITP #Math #LeanProver via Pietro Monticone (@PietroMonticone).
++ [[https://youtu.be/E9WIP5YqQt8][What is an interactive theorem prover?]] ~ Kevin Buzzard. #ITP #Math #LeanProver via Pietro Monticone (@PietroMonticone).
++ [[https://youtu.be/KiI8OnlBTKs][The Liquid Tensor Experiment]]. ~ Kevin Buzzard. #ITP #Math #LeanProver via Pietro Monticone (@PietroMonticone).
++ [[https://arxiv.org/abs/2403.08937][Bugs in Large Language Models generated code: An empirical study]]. ~ Florian Tambon, Arghavan Moradi Dakhel, Amin Nikanjam, Foutse Khomh, Michel C. Desmarais, Giuliano Antoniol. #LLMs #Programming
++ [[https://www.youtube.com/live/_LgWD3UTKfw][Category theory inspired by LLMs]]. ~ Tai-Danae Bradley. #LLMs #CategoryTheory
+
 *** 18-Mar-24
 + [[https://terrytao.files.wordpress.com/2024/03/machine-jan-3.pdf][Machine assisted proofs [Slides]]]. ~ Terence Tao (@tao@mathstodon.xyz). #ITP #ProofAssistants #Coq #IsabelleHOL #HOL_Light #LeanProver #MachineLearning #LLMs #Math
 + [[https://terrytao.files.wordpress.com/2024/03/machine-assisted-proof-notices.pdf][Machine assisted proofs]]. ~ Terence Tao (@tao@mathstodon.xyz). #ITP #ProofAssistants #Coq #IsabelleHOL #HOL_Light #LeanProver #MachineLearning #LLMs #Math
