--- a/README.org
+++ b/README.org
@@ -59,6 +59,12 @@ its content.
 
 ** Marzo 2024
 
+*** 20-Mar-24
++ [[https://arxiv.org/abs/2403.13310][A semantic search engine for Mathlib4]]. ~ Guoxiong Gao et als. #ITP #LeanProver #Mathlib
++ [[https://arxiv.org/abs/2403.13700][Taming differentiable logics with Coq formalisation]]. ~ Reynald Affeldt et als. #ITP #Coq
++ [[https://arxiv.org/abs/2403.13403][Mechanized HOL reasoning in set theory]]. ~ Simon Guilloud et als. #ITP #HOL #Lisa
++ [[https://pure.tue.nl/ws/portalfiles/portal/320649087/Remkes_P.pdf][Verifying programs involving self-application using Dafny]]. ~ Pim Remkes. #FormalVerification #Dafny
+
 *** 19-Mar-24
 + [[https://ari-informatik.uibk.ac.at/meetings/final/slides/DKx4.pdf][An Isabelle/HOL formalization of narrowing and its applications to E-unifiability, reachability and infeasibility]]. ~ Dohan Kim. #ITP #IsabelleHOL
 + [[https://arxiv.org/abs/2310.10631][Llemma: An open language model for mathematics]]. ~ Zhangir Azerbayev, Hailey Schoelkopf, Keiran Paster, Marco Dos Santos, Stephen McAleer, Albert Q. Jiang, Jia Deng, Stella Biderman, Sean Welleck. #LLMs #Math #ITP #LeanProver #IsabelleHOL #Coq
