--- a/README.org
+++ b/README.org
@@ -59,6 +59,13 @@ its content.
 
 ** Marzo 2024
 
+*** 29-Mar-24
++ [[https://arxiv.org/abs/2403.19639][Linear programming in Isabelle/HOL]]. ~ Julian Parsert. #ITP #IsabelleHOL #Math
++ [[https://arxiv.org/abs/2108.03018][Conditional separation as a binary relation (A Coq assisted proof)]]. ~ Jean-Philippe Chancelier, Michel de Lara, Benjamin Heymann. #ITP #Coq
++ [[https://flaviocorpa.com/haskell-for-elm-developers-giving-names-to-stuff-part-4-parser-combinators.html][Haskell for Elm developers: giving names to stuff (Part 4 - Parser combinators)]]. ~ Flavio Corpa (@FlavioCorpa). #Haskell #Elm #FunctionalProgramming
++ [[https://golem.ph.utexas.edu/category/2024/03/why_mathematics_is_boring_1.html][Why mathematics is boring]]. ~ John Baez. #Math
++ [[https://people.math.harvard.edu/~knill/graphgeometry/papers/fundamental.pdf][Some fundamental theorems in mathematics]]. ~ Oliver Knill. #Math
+
 *** 28-Mar-24
 + [[https://arxiv.org/abs/2403.18229][A comprehensive overview of the Lebesgue differentiation theorem in Coq]]. ~ Reynald Affeldt, Zachary Stone. #ITP #Coq #Math
 + [[https://www.popularmechanics.com/science/math/a60280173/machines-are-on-the-verge-of-tackling-fermats-last-theorema-proof-that-once-defied-them/][Machines are on the verge of tackling Fermat’s last theorem—a proof that once defied them]]. ~ Caroline Delbert. #ITP #LeanProver #Math
