--- a/README.org
+++ b/README.org
@@ -60,6 +60,10 @@ its content.
 
 ** Abril 2024
 
+*** 05-Abr-24
++ [[https://taylor.fausak.me/2024/03/31/alias-current-module/][Alias the current module with Imp]]. ~ Taylor Fausak. #Haskell #FunctionalProgramming
++ [[https://oleg.fi/gists/posts/2024-04-01-implicit-arguments.html][Implicit arguments]]. ~ Oleg Grenrus. #Haskell #FunctionalProgramming
+
 *** 04-Abr-24
 + [[http://www.mat.unb.br/~ayala/CompactnessAndApplications.pdf][Combinatorial applications of the compactness theorem]]. ~ Fabián Fernando Serrano Suárez, Mauricio Ayala-Rincón, Thaynara Arielly de Lima. #ITP #IsabelleHOL
 + [[http://www.mat.unb.br/~ayala/Certified_AC_Unification_Algorithm.pdf][Certified first-order AC-unification and applications]]. ~ Mauricio Ayala-Rincón et als. #ITP #PVS
